tests/paczka1/fuzzy1/27724135.err
Error in line 4: 2vm S452 23,9
Error in line 9: 2vm S892 46,3
Error in line 1: bvve A732 8,2
Error in line 19: 2idByZ46F S892 8,80
Error in line 30: SCiPAyj A181 88,3
Error in line 27: bvve A732 17,1
Error in line 35: 2vm S452 73,2
